# learning-agetic_ai

./: README.md
Openai SDK/OpenRouter/: .env  main.py  pyproject.toml
Openai SDK/basic_agent/: .env  main.py  pyproject.toml
Openai SDK/hello_agent/: .env  main.py  pyproject.toml
Openai SDK/litellm/: .env  pyproject.toml
crewai/gmail_searcher/: README.md  poem.txt  pyproject.toml
crewai/gmail_searcher/src/gmail_searcher/: main.py  main1.py  main2.py
crewai/gmail_searcher/src/gmail_searcher/crews/dev_crew/: dev_crew.py
crewai/gmail_searcher/src/gmail_searcher/crews/dev_crew/config/: agents.yaml  tasks.yaml
crewai/gmail_searcher/src/gmail_searcher/crews/mail_searcher/: searcher_crew.py
crewai/gmail_searcher/src/gmail_searcher/crews/mail_searcher/config/: agents.yaml  tasks.yaml
crewai/gmail_searcher/src/gmail_searcher/tools/: custom_tool.py
crewai/hello_agent/: README.md  pyproject.toml
crewai/hello_agent/src/: main1.py
crewai/hello_agent/src/hello_agent/: main.py  main1.py
crewai/hello_flow/: README.md  poem.txt  pyproject.toml
crewai/hello_flow/src/hello_flow/: main.py
crewai/litellm/: .env  README.md  poem.txt  pyproject.toml
crewai/litellm/src/litellm/: crew.py  gemini_key.py  main.py
crewai/litellm/src/litellm/tools/: custom_tool.py
crewai/multiple_agent/: README.md  pyproject.toml
crewai/multiple_agent/src/multiple_agent/: main.py  main1.py
crewai/multiple_agent/src/multiple_agent/crews/poem_crew/: poem_crew.py
crewai/multiple_agent/src/multiple_agent/crews/poem_crew/crew1/: crew.py
crewai/multiple_agent/src/multiple_agent/crews/poem_crew/crew1/config/: agents.yaml  tasks.yaml
crewai/multiple_agent/src/multiple_agent/tools/: custom_tool.py
crewai/project01/: .env  poem.txt  pyproject.toml
crewai/project01/src/project01/: main.py  main1.py  main2.py
crewai/project02/: README.md  pyproject.toml  report.md
crewai/project02/src/project02/: crew.py  main.py
crewai/ui/: README.md  pyproject.toml
crewai/ui/src/ui/: main.py  main1.py
crewai/video_search_agent/: README.md  pyproject.toml
crewai/video_search_agent/src/: main1.py
crewai/video_search_agent/src/video_search_agent/: main.py
project01/: pyproject.toml
