[project]
name = "project01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rimsha_bibi", email = "108316811+Rimshashehzadi@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
project01 = "project01:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
