[project]
name = "gmail_searcher"
version = "0.1.0"
description = "gmail_searcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
]

[project.scripts]
kickoff = "gmail_searcher.main:kickoff"
plot = "gmail_searcher.main:plot"
mul_agents = "gmail_searcher.main1:kickoff"
find_email = "gmail_searcher.main2:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
