[project]
name = "hello_agent"
version = "0.1.0"
description = "hello_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
]

[project.scripts]
kickoff = "hello_agent.main:kickoff"
plot = "hello_agent.main:plot"
hello_flow = "hello_agent.main1:run_flow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
