[project]
name = "litellm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rimsha_bibi", email = "108316811+Rimshashehzadi@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.55.2",
]

[project.scripts]
litellm = "litellm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
