[project]
name = "multiple_agent"
version = "0.1.0"
description = "multiple_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
]

[project.scripts]
kickoff = "multiple_agent.main:kickoff"
plot = "multiple_agent.main:plot"
mul_agents="multiple_agent.main1:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
