[project]
name = "project01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rimsha_bibi", email = "108316811+Rimshashehzadi@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.105.0",
]

[project.scripts]
project01 = "project01:main"
piaic = "project01.main:kickoff"
chain_prompt = "project01.main:kickoff"
fun_fact ="project01.main1:kickoff"
generate_topic = "project01.main2:kickoff"
chain_prompt_flow = "project01.main2:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
