[project]
name = "video_search_agent"
version = "0.1.0"
description = "video_search_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
]

[project.scripts]
kickoff = "video_search_agent.main:kickoff"
plot = "video_search_agent.main:plot"
search = "video_search_agent.main1:run_crew"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
